# polk

./: .clang-tidy  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_mdrange.cpp  benchmark_range.cpp  main.cpp
cmake/modules/: dependencies.cmake  install.cmake  options.cmake
compile_benchmarks/: CMakeLists.txt  compile_benchmark_mdrange_kokkos.cpp  compile_benchmark_mdrange_polk.cpp  compile_benchmark_range_kokkos.cpp  compile_benchmark_range_polk.cpp
examples/: CMakeLists.txt  example_ddc.cpp  example_dynk.cpp
include/: CMakeLists.txt  kokkos_concepts.hpp
include/polk/: execution_policy_creator.hpp
tests/: CMakeLists.txt  test.cpp
